--- a/package.json
+++ b/package.json
@@ -1,24 +1,38 @@
 {
-  "name": "ots",
-  "version": "0.1.0",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "name": "@sniptt-official/ots-aws",
+  "version": "0.0.0",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "!node_modules"
+  ],
   "scripts": {
+    "postinstall": "tsc",
+    "format": "prettier --write '{.github,lambda-functions,lib,test}/**' '*.json'",
+    "format:check": "prettier --check '{.github,lambda-functions,lib,test}/**' '*.json'",
     "build": "tsc",
+    "build:lambda-functions": "cd lib/constructs/lambda/functions; tsc",
     "watch": "tsc -w",
     "test": "jest"
   },
+  "prettier": "@slavovojacek/prettier-config",
   "devDependencies": {
-    "@types/jest": "^26.0.10",
-    "@types/node": "10.17.27",
-    "aws-cdk-lib": "2.16.0",
-    "constructs": "^10.0.0",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
-    "typescript": "~3.9.7"
+    "@slavovojacek/prettier-config": "^0",
+    "@slavovojacek/tsconfig": "^0",
+    "@types/jest": "^27",
+    "@types/node": "^17",
+    "aws-cdk-lib": "^2.16",
+    "constructs": "^10.0",
+    "jest": "^27",
+    "ts-jest": "^27",
+    "typescript": "^4.6"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "2.16.0",
-    "constructs": "^10.0.0"
+    "aws-cdk-lib": "^2.16",
+    "constructs": "^10.0"
+  },
+  "dependencies": {
+    "env-var": "^7.1"
   }
 }
