--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,10 @@
 {
+  "extends": "@slavovojacek/tsconfig",
   "compilerOptions": {
-    "target": "ES2018",
-    "module": "commonjs",
-    "lib": [
-      "es2018"
-    ],
-    "declaration": true,
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": false,
     "inlineSourceMap": true,
     "inlineSources": true,
-    "experimentalDecorators": true,
-    "strictPropertyInitialization": false,
-    "typeRoots": [
-      "./node_modules/@types"
-    ]
+    "outDir": "build"
   },
-  "exclude": [
-    "node_modules",
-    "cdk.out"
-  ]
+  "include": ["lib"],
+  "exclude": ["lib/constructs/lambda/functions"]
 }
