--- a/lambda-functions/tsconfig.json
+++ b/lambda-functions/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@slavovojacek/tsconfig",
   "compilerOptions": {
-    "noEmit": true
+    "noEmit": true,
+    "incremental": false
   }
 }
