--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist",
-    "!node_modules"
+    "dist"
   ],
   "scripts": {
-    "postinstall": "tsc",
+    "postinstall": "cd lambda-functions; npm ci",
+    "build": "tsc && cd lambda-functions; npm run build",
+    "postbuild": "cp -r lambda-functions/dist dist/constructs/lambda/assets",
+    "test": "jest",
     "format": "prettier --write '{.github,lambda-functions,lib,test}/**' '*.json'",
-    "format:check": "prettier --check '{.github,lambda-functions,lib,test}/**' '*.json'",
-    "build": "tsc",
-    "build:lambda-functions": "cd lib/constructs/lambda/functions; tsc",
-    "watch": "tsc -w",
-    "test": "jest"
+    "format:check": "prettier --check '{.github,lambda-functions,lib,test}/**' '*.json'"
   },
   "prettier": "@slavovojacek/prettier-config",
   "devDependencies": {
