--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "!dist/*.tsbuildinfo"
   ],
   "scripts": {
     "postinstall": "cd lambda-functions; npm ci",
@@ -16,6 +17,9 @@
   },
   "prettier": "@slavovojacek/prettier-config",
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.2",
     "@slavovojacek/prettier-config": "^0",
     "@slavovojacek/tsconfig": "^0",
     "@types/jest": "^27",
@@ -23,6 +27,7 @@
     "aws-cdk-lib": "^2.16",
     "constructs": "^10.0",
     "jest": "^27",
+    "semantic-release": "^19.0.2",
     "ts-jest": "^27",
     "typescript": "^4.6"
   },
