ci: disable dry run

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -4,7 +4,7 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
-    ["@semantic-release/npm", { "tarballDir": "dist" }],
+    "@semantic-release/npm",
     [
       "@semantic-release/git",
       {
@@ -14,7 +14,7 @@
     [
       "@semantic-release/github",
       {
-        "assets": ["CHANGELOG.md", "dist/*.tgz"]
+        "assets": ["CHANGELOG.md"]
       }
     ]
   ]
