--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -36,6 +36,6 @@ jobs:
 
       - name: Publish
         run: |
-          npx semantic-release --dry-run
+          npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
