--- a/lambda-functions/package.json
+++ b/lambda-functions/package.json
@@ -26,6 +26,7 @@
     "@slavovojacek/prettier-config": "^0",
     "@slavovojacek/tsconfig": "^0",
     "@types/aws-lambda": "^8",
+    "@types/node": "^17",
     "esbuild": "^0.14",
     "typescript": "^4.6"
   }
