fix: ci test flows

--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Run semantic release
         run: |
           npm ci
+          npm run build
           npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
