--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,8 +50,8 @@ jobs:
       - name: Check format, lint and build from source
         working-directory: ./lambda-functions
         run: |
-          npm ci
+          npm ci --ignore-scripts
           npm run format:check
           npm run lint:check
-          npm run build
+          npx tsc
         # TODO: add test step
