--- a/package.json
+++ b/package.json
@@ -1,45 +1,33 @@
 {
   "name": "@sniptt-official/ots-aws",
   "version": "1.2.2",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
-    "dist",
-    "!dist/*.tsbuildinfo"
+    "lib/**/*.js",
+    "lib/**/*.d.ts"
   ],
   "scripts": {
     "build": "tsc",
-    "test": "jest",
-    "format": "prettier --write '{.github,lib,test}/**' '*.json'",
-    "format:check": "prettier --check '{.github,lib,test}/**' '*.json'",
-    "lint": "eslint '{lib,test}/**/*.ts' --fix",
-    "lint:check": "eslint '{lib,test}/**/*.ts'"
-  },
-  "prettier": "@slavovojacek/prettier-config",
-  "eslintConfig": {
-    "extends": "@slavovojacek/eslint-config"
+    "format": "prettier --write '{.github,lib}/**' '*.json'",
+    "format:check": "prettier --check '{.github,lib}/**' '*.json'"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6",
     "@semantic-release/git": "^10",
     "@semantic-release/github": "^8",
-    "@slavovojacek/eslint-config": "^0",
-    "@slavovojacek/prettier-config": "^0",
-    "@slavovojacek/tsconfig": "^0",
-    "@types/jest": "^27",
-    "@types/node": "^17",
-    "aws-cdk-lib": "^2.16",
-    "constructs": "^10.0",
-    "jest": "^27",
+    "@types/node": "^18",
+    "esbuild": "^0.15.7",
+    "prettier": "^2.7.1",
     "semantic-release": "^19",
-    "ts-jest": "^27",
-    "typescript": "^4.6"
+    "typescript": "^4.8"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.16",
-    "constructs": "^10.0"
+    "aws-cdk-lib": "^2.40",
+    "constructs": "^10.1"
   },
   "dependencies": {
-    "env-var": "^7"
+    "aws-cdk-lib": "^2.40",
+    "constructs": "^10.1"
   }
 }
